# accumulator

./: Cargo.toml  README.md  run.sh
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: http.rs  lib.rs  memory.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
web/: Cargo.toml  README.md
web/src/: lib.rs  main.rs
web/src/routes/: mod.rs
web/src/state/: mod.rs
web/src/utils/: mod.rs  test.rs
