[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
client = { path = "../client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.4", features = ["derive"] }
