[package]
name = "client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# TODO: Hide serde behind a flag
serde = { version = "1.0.193", features = ["derive"] }
miden-crypto = { version = "0.9.1", features = ["serde"] }
anyhow = "1.0.82"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["trace", "util"] }
async-trait = "0.1.80"

[dev-dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace", "util"] }
http-body-util = "0.1.0"
tower = "0.4.13"
