[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true


[features]
performance = []

[dependencies]
axum = { version="0.7.2", features=["macros"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
client = { path = "../client" }
async-trait = "0.1.74"
blake3 = { version="1.5.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
http-body-util = "0.1.0"
tower-http = { version = "0.5.2", features = ["trace"] }
miden-crypto = { version = "0.9.1", features = ["serde"] }
reqwest = "0.12.3"
anyhow = "1.0.82"

[dev-dependencies]
tower = "0.4.13"
